2014-01-08  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_gis.php: fixed the agent name label.
	
	Fixes: #2401

2014-01-08  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_gis.php: fixed with a dirty hack the bug about
	the google maps with own old version of openlayer.

2014-01-07  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/planned_downtime.list.php: fixed the manual stop
	of planned downtime.
	
	Fixes: #479 (Integria locally)

2014-01-07  Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/agentes/networkmap.php: fixed the save the font size in
	the networkmaps.
	
	Fixes: #2408

2013-12-27 Hirofumi Kosaka <kosaka@rworks.jp>

	* include/functions_api.php: Added 'plugin_macros' and
	'module_macros' to the return column of tree_agents API.

2013-12-27 Hirofumi Kosaka <kosaka@rworks.jp>

	* include/functions_api.php: Added 'module_macros' parameter
	to api_set_create_*_modules, api_set_update_*_module, and so
	on. Also added 'macros' parameter to plugin module functions.

	Fixes: #2398

2013-12-26  Sancho Lerena <slerena@artica.es>
	
	* include/api.php: Avoid to store API auth failure in
	session log to avoid DoS due high volume of transactions.

2013-12-19  Sergio Martin <sergio.martin@artica.es>

	* include/functions_visual_map.php: Fixed string simple 
	values in visual console for incident #463

2013-12-19  Sergio Martin <sergio.martin@artica.es>

	* godmode/modules/manage_network_components_form.php: Fixed WMI 
	components form fails due to bad javascript code for incident #462

2013-12-17  Sergio Martin <sergio.martin@artica.es>

	* mobile/include/style/main.css: Add important attribute to 
	override jquery mobile style of last commit. Change home layout
	for widths greater than 800px (tablet devices)

2013-12-17  Sergio Martin <sergio.martin@artica.es>

	* mobile/include/style/main.css: Add a responsive design hack to
	mobile console to increase tables with to 100% in tablet devices
